changing querys
